--- a/index.html
+++ b/index.html
@@ -34,9 +34,38 @@
 
             <div id="paso-2" class="seccion">
                 <h2>Tus Datos y Citas</h2>
+                <p class="text-center">Coloca tus datos y fecha de tu cita</p>
+
+                <form class="formulario" action="submit">
+                    <div class="campo">
+                        <label for="nombre"
+                        >Nombre</label>
+                        <input 
+                            id="nombre"
+                            type="text"
+                            placeholder="Tu nombre"
+                        >
+                    </div>
+                    <div class="campo">
+                        <label for="fecha"
+                        >Fecha</label>
+                        <input 
+                        id="fecha"
+                        type="date"
+                        >
+                    </div>
+                    <div class="campo">
+                        <label for="hora"
+                        >Hora</label>
+                        <input 
+                        id="hora"
+                        type="time"
+                        >
+                    </div>
+                </form>
             </div>
 
-            <div id="paso-3" class="seccion">
+            <div id="paso-3" class="seccion contenido-resumen">
                 <h2>Resumen</h2>
             </div>
 
