Se agrego la validacion de nombre

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
 
             <div id="paso-3" class="seccion contenido-resumen">
                 <h2>Resumen</h2>
+                <div class="servicios-resumen">
+
+                </div>
             </div>
 
             <!-- Paginacion -->
