Se termino la validacion de la fecha y la hora ya se agrega al objeto cita

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
                         <input 
                         id="hora"
                         type="time"
+                        min="08:00"
+                        max="16:00"
                         >
                     </div>
                 </form>
